--- a/src/Styles/Product.module.css
+++ b/src/Styles/Product.module.css
@@ -1,5 +1,6 @@
 .product {
     max-width: 250px;
+    height: 400px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -20,9 +21,12 @@
   .product h2 {
     font-size: 24px;
     margin-bottom: 10px;
+    color: black;
   }
   
   .product p {
     font-size: 18px;
     margin-bottom: 10px;
+    color: black;
+
   }
