--- a/src/Styles/Products.module.css
+++ b/src/Styles/Products.module.css
@@ -1,5 +1,7 @@
 .products {
     color: black;
     display: flex;
-    flex-direction: row;
+    flex-wrap: wrap;
+    /* display: flex;
+    flex-direction: row; */
 }
