--- a/src/Styles/Product.module.css
+++ b/src/Styles/Product.module.css
@@ -1,32 +1,31 @@
 .product {
-    max-width: 250px;
-    height: 400px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    margin: 20px;
-    border-style: solid;
-    border: 1px solid black;
-    border-radius: 10px;
-  }
-  
-  .product img {
-    width: 200px;
-    height: 200px;
-    object-fit: contain;
-    margin-bottom: 10px;
-  }
-  
-  .product h2 {
-    font-size: 24px;
-    margin-bottom: 10px;
-    color: black;
-  }
-  
-  .product p {
-    font-size: 18px;
-    margin-bottom: 10px;
-    color: black;
+  flex-grow: 1;
+  display: table-cell;
+  min-width: 200px;
+  max-width: 250px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  margin: 20px;
+  border-style: solid;
+  border: 1px solid black;
+  border-radius: 10px;
+}
 
-  }
+.product img {
+  width: 200px;
+  height: 200px;
+  object-fit: contain;
+  margin-bottom: 10px;
+}
+
+.product h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.product p {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
