--- a/src/Styles/Product.module.css
+++ b/src/Styles/Product.module.css
@@ -1,31 +1,64 @@
-.product {
-  flex-grow: 1;
-  display: table-cell;
-  min-width: 200px;
-  max-width: 250px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 20px;
-  margin: 20px;
-  border-style: solid;
-  border: 1px solid black;
-  border-radius: 10px;
+.product-card {
+  height: 100%;
+  margin-bottom: 20px;
 }
 
-.product img {
-  width: 200px;
+.product-card .card-text {
+  overflow: hidden;
+}
+
+.product-card .card-description {
+  font-size: 14px;
+  margin-bottom: 10px;
+}
+
+.product-card .card-price {
+  font-size: 16px;
+}
+
+.product-card .card-img {
   height: 200px;
-  object-fit: contain;
-  margin-bottom: 10px;
+  object-fit: cover;
 }
 
-.product h2 {
-  font-size: 24px;
-  margin-bottom: 10px;
+.product-card .card-body {
+  padding: 10px;
 }
 
-.product p {
-  font-size: 18px;
-  margin-bottom: 10px;
+.product-card .delete-button {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+}
+
+.product-card .soldout-button {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+}
+
+.modal-header .modal-title {
+  margin: 0 auto;
+  text-align: center;
+}
+
+.modal-content {
+  background-color: #343a40;
+  color: #fff;
+  text-align: center;
+}
+
+.modal-header {
+  border-bottom: 0;
+}
+
+.modal-footer {
+  border-top: 0;
+  padding: 5px;
+  justify-content: center;
+}
+
+.modal-title {
+  margin-right: auto;
+  margin-left: auto;
 }
