--- a/src/Styles/EditProduct.css
+++ b/src/Styles/EditProduct.css
@@ -1,37 +1,37 @@
-.product-card {
+.editproduct-card {
     height: 100%;
     margin-bottom: 20px;
 }
 
-.product-card .card-text {
+.editproduct-card .card-text {
     overflow: hidden;
 }
 
-.product-card .card-description {
+.editproduct-card .card-description {
     font-size: 14px;
     margin-bottom: 10px;
 }
 
-.product-card .card-price {
+.editproduct-card .card-price {
     font-size: 16px;
 }
 
-.product-card .card-img {
+.editproduct-card .card-img {
     height: 200px;
     object-fit: cover;
 }
 
-.product-card .card-body {
+.editproduct-card .card-body {
     padding: 10px;
 }
 
-.product-card .delete-button {
+.editproduct-card .delete-button {
   position: absolute;
   bottom: 10px;
   left: 10px;
 }
 
-.product-card .soldout-button {
+.editproduct-card .soldout-button {
   position: absolute;
   bottom: 10px;
   right: 10px;
