--- a/src/Styles/Navbar_V2.css
+++ b/src/Styles/Navbar_V2.css
@@ -77,11 +77,37 @@
     position: relative;
   }
 
+  .navbar {
+    background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2rem;
+    position: sticky;
+    top: 0;
+    z-index: 999;
+  }
+
+  .logout {
+
+    padding-top: 60px;
+    padding-right: 10px;
+
+  }
+
+  .nav-socials{
+
+    padding-top: 60px;
+
+  }
+  
+
   .nav-menu {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 90vh;
+    height: auto;
     position: absolute;
     top: 80px;
     left: -100%;
@@ -95,6 +121,7 @@
     opacity: 1;
     transition: all 0.5s ease;
     z-index: 1;
+    height: auto;
   }
 
   .nav-links {
