--- a/src/Styles/AddProduct.css
+++ b/src/Styles/AddProduct.css
@@ -20,7 +20,7 @@
 
   .modal-content {
 
-    background-color: green;
+    background-color: rgb(22, 192, 22);
     color: black;
     text-align: center;
 
