--- a/src/Styles/AddProduct.css
+++ b/src/Styles/AddProduct.css
@@ -1,6 +1,7 @@
 .formContainer {
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
     height: 100%;
     text-align: center;
