--- a/src/Styles/EditProduct.css
+++ b/src/Styles/EditProduct.css
@@ -18,6 +18,7 @@
 .editproduct-card .card-description {
     font-size: 14px;
     margin-bottom: 10px;
+    text-align: center;
 }
 
 .editproduct-card .card-price {
