--- a/src/Styles/Product.css
+++ b/src/Styles/Product.css
@@ -57,3 +57,21 @@
   padding-bottom: 0px;
 }
 
+@media only screen and (max-width: 767px) {
+  .product-card {
+    width: 100%;
+    height: 100%;
+    margin-right: 5%;
+    float: left;
+  }
+  .product-card:nth-child(2n) {
+    margin-right: 0;
+  }
+
+  .small-col {
+    width: 50%;
+  }
+
+}
+
+
