--- a/src/Styles/EditProduct.css
+++ b/src/Styles/EditProduct.css
@@ -7,43 +7,57 @@
 }
 
 .editproduct-card {
-    height: 100%;
-    margin-bottom: 20px;
+  height: 100%;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .editproduct-card .card-text {
-    overflow: hidden;
+  overflow: hidden;
 }
 
 .editproduct-card .card-description {
-    font-size: 14px;
-    margin-bottom: 10px;
-    text-align: center;
+  font-size: 14px;
+  margin-bottom: 10px;
+  text-align: center;
 }
 
 .editproduct-card .card-price {
-    font-size: 16px;
+  font-size: 16px;
 }
 
 .editproduct-card .card-img {
-    height: 200px;
-    object-fit: cover;
+  height: 200px;
+  object-fit: cover;
 }
 
 .editproduct-card .card-body {
-    padding: 10px;
+  padding: 10px;
 }
 
 .editproduct-card .delete-button {
-  position: absolute;
-  bottom: 10px;
-  left: 10px;
+  order: 2;
 }
 
 .editproduct-card .soldout-button {
-  position: absolute;
-  bottom: 10px;
-  right: 10px;
+  order: 1;
+}
+
+.editproduct-card .delete-button,
+.editproduct-card .soldout-button {
+  width: 100%; /* Adjust the width as needed */
+  height: 75px; /* Adjust the height as needed */
+  font-size: 16px; /* Adjust the font size as needed */
+  /* Add any other styles you want */
+}
+
+
+.editproduct-card .card-body {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .modal-header .modal-title {
@@ -72,4 +86,38 @@
   margin-left: auto;
 }
 
+@media only screen and (max-width: 767px) {
+  .editproduct-card {
+    display: inline-block;
+    margin-right: 10px;
+    margin-bottom: 20px;
+    vertical-align: top;
+  }
 
+  .editproduct-card:nth-child(2n) {
+    margin-right: 0;
+  }
+
+  .small-col {
+    width: 50%;
+  }
+
+  .carousel-indicators {
+    font-size: 0.25rem; /* adjust the font size to your desired value */
+  }
+
+  .editproduct-card .delete-button,
+  .editproduct-card .soldout-button {
+    order: unset;
+    display: block;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .editproduct-card {
+    flex-basis: calc(50% - 10px); /* Adjust the width of each card */
+  }
+}
