--- a/src/Styles/NewsLetterSignup.css
+++ b/src/Styles/NewsLetterSignup.css
@@ -1,6 +1,30 @@
 .container-news {
   margin-top: 25px;
   padding-bottom: 1px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.Logo {
+  width: 100%;
+  height: 100%;
+  max-width: 300px;
+  max-height: 300px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 50px;
+}
+
+.group-content {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 1 auto;
 }
 
 .newsletter-section {
